[gd_scene load_steps=127 format=3 uid="uid://cyu6wosf2qc3v"]

[ext_resource type="Texture2D" uid="uid://batkaluf3jygl" path="res://assets/corgi/01_idle/skeleton-0b_idle_00.png" id="1_0os5j"]
[ext_resource type="Script" path="res://scenes/chonki.gd" id="1_j6uc5"]
[ext_resource type="Texture2D" uid="uid://dyi1618ew4mac" path="res://assets/corgi/01_idle/skeleton-0b_idle_01.png" id="2_v0sv5"]
[ext_resource type="Texture2D" uid="uid://cn4gyafnt00v5" path="res://assets/corgi/01_idle/skeleton-0b_idle_02.png" id="3_mwp3x"]
[ext_resource type="Texture2D" uid="uid://12daaqh7ebhs" path="res://assets/corgi/01_idle/skeleton-0b_idle_03.png" id="4_xa5kk"]
[ext_resource type="Texture2D" uid="uid://dp6equ7nwhj32" path="res://assets/corgi/01_idle/skeleton-0b_idle_04.png" id="5_dcqf1"]
[ext_resource type="Texture2D" uid="uid://bha544hwyogcd" path="res://assets/corgi/01_idle/skeleton-0b_idle_05.png" id="6_lrihx"]
[ext_resource type="Texture2D" uid="uid://by63kr7v16vx1" path="res://assets/corgi/01_idle/skeleton-0b_idle_06.png" id="7_0i4sn"]
[ext_resource type="Texture2D" uid="uid://dg2r1g5kfw0hh" path="res://assets/corgi/01_idle/skeleton-0b_idle_07.png" id="8_cywpw"]
[ext_resource type="Texture2D" uid="uid://d0a74i20lxqdh" path="res://assets/corgi/01_idle/skeleton-0b_idle_08.png" id="9_wuq8a"]
[ext_resource type="Texture2D" uid="uid://dm6bvke7giy2f" path="res://assets/corgi/01_idle/skeleton-0b_idle_09.png" id="10_k1gwj"]
[ext_resource type="Texture2D" uid="uid://jg17r0o8cply" path="res://assets/corgi/01_idle/skeleton-0b_idle_10.png" id="11_uxit1"]
[ext_resource type="Texture2D" uid="uid://bnderqcixbujq" path="res://assets/corgi/01_idle/skeleton-0b_idle_11.png" id="12_7bfuq"]
[ext_resource type="Texture2D" uid="uid://1nlf7a2wu3gv" path="res://assets/corgi/01_idle/skeleton-0b_idle_12.png" id="13_sf3uc"]
[ext_resource type="Texture2D" uid="uid://b24dgdpykibx1" path="res://assets/corgi/01_idle/skeleton-0b_idle_13.png" id="14_ip3xe"]
[ext_resource type="Texture2D" uid="uid://b1xptql8vh6nr" path="res://assets/corgi/01_idle/skeleton-0b_idle_14.png" id="15_q3cah"]
[ext_resource type="Texture2D" uid="uid://chkl1ugnqs5ua" path="res://assets/corgi/01_idle/skeleton-0b_idle_15.png" id="16_sneax"]
[ext_resource type="Texture2D" uid="uid://bswjoj6rrkr1d" path="res://assets/corgi/01_idle/skeleton-0b_idle_16.png" id="17_jqkyc"]
[ext_resource type="Texture2D" uid="uid://caxi34kbheyhb" path="res://assets/corgi/01_idle/skeleton-0b_idle_17.png" id="18_mve6m"]
[ext_resource type="Texture2D" uid="uid://b4t76qkoqu2n8" path="res://assets/corgi/01_idle/skeleton-0b_idle_18.png" id="19_bhovx"]
[ext_resource type="Texture2D" uid="uid://b2rq4hwxjqbc0" path="res://assets/corgi/01_idle/skeleton-0b_idle_19.png" id="20_cbt07"]
[ext_resource type="Texture2D" uid="uid://clxervl17pv3a" path="res://assets/corgi/01_idle/skeleton-0b_idle_20.png" id="21_g1phg"]
[ext_resource type="Texture2D" uid="uid://codxpiwqu16af" path="res://assets/corgi/02_jump/skeleton-0c_jump_00.png" id="22_qpv4r"]
[ext_resource type="Texture2D" uid="uid://bnbjhpuvglejj" path="res://assets/corgi/02_jump/skeleton-0c_jump_01.png" id="23_lvwtg"]
[ext_resource type="Texture2D" uid="uid://bb78qs1q27rdy" path="res://assets/corgi/02_jump/skeleton-0c_jump_02.png" id="24_wa4qo"]
[ext_resource type="Texture2D" uid="uid://oxx44tbp7ii4" path="res://assets/corgi/02_jump/skeleton-0c_jump_03.png" id="25_vp8e4"]
[ext_resource type="Texture2D" uid="uid://2kl68j27g06s" path="res://assets/corgi/02_jump/skeleton-0c_jump_04.png" id="26_4bqwk"]
[ext_resource type="Texture2D" uid="uid://3rmuhivycroa" path="res://assets/corgi/02_jump/skeleton-0c_jump_05.png" id="27_7fsi1"]
[ext_resource type="Texture2D" uid="uid://dqwwbp5syvpsg" path="res://assets/corgi/02_jump/skeleton-0c_jump_06.png" id="28_6ljc7"]
[ext_resource type="Texture2D" uid="uid://b4hrog8jfqot" path="res://assets/corgi/02_jump/skeleton-0c_jump_07.png" id="29_tsbyy"]
[ext_resource type="Texture2D" uid="uid://dbflo42sfjx0r" path="res://assets/corgi/02_jump/skeleton-0c_jump_08.png" id="30_mr0te"]
[ext_resource type="Texture2D" uid="uid://cvrgtjtaehtl4" path="res://assets/corgi/02_jump/skeleton-0c_jump_09.png" id="31_whnep"]
[ext_resource type="Texture2D" uid="uid://cw61ijn18c8fe" path="res://assets/corgi/02_jump/skeleton-0c_jump_10.png" id="32_4e57m"]
[ext_resource type="Texture2D" uid="uid://dx8ta2qp1jwmi" path="res://assets/corgi/04_running/skeleton-0e_running_00.png" id="33_2604g"]
[ext_resource type="Texture2D" uid="uid://b352qae02y6vp" path="res://assets/corgi/04_running/skeleton-0e_running_01.png" id="34_2xcsg"]
[ext_resource type="Texture2D" uid="uid://dnurssysy43g0" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_00.png" id="34_i1w4s"]
[ext_resource type="Texture2D" uid="uid://cntbf8up6ic2y" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_00.png" id="34_y501y"]
[ext_resource type="Texture2D" uid="uid://crq5ke58ujfjm" path="res://assets/corgi/04_running/skeleton-0e_running_02.png" id="35_5up4i"]
[ext_resource type="Texture2D" uid="uid://b5pclg813lil5" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_01.png" id="35_elhwk"]
[ext_resource type="Texture2D" uid="uid://c0q0w26toljrx" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_01.png" id="35_m4ml6"]
[ext_resource type="Texture2D" uid="uid://dknhdqg6dk8mf" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_02.png" id="36_dr6sc"]
[ext_resource type="Texture2D" uid="uid://cucv45rhoj06x" path="res://assets/corgi/04_running/skeleton-0e_running_03.png" id="36_qdkj2"]
[ext_resource type="Texture2D" uid="uid://bsumagwggartc" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_02.png" id="36_tmpw1"]
[ext_resource type="Texture2D" uid="uid://dbkhcdh8velbp" path="res://assets/corgi/04_running/skeleton-0e_running_04.png" id="37_2l02w"]
[ext_resource type="Texture2D" uid="uid://u01ysb6753q1" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_03.png" id="37_qc067"]
[ext_resource type="Texture2D" uid="uid://srroojs1md4b" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_03.png" id="37_xh7v6"]
[ext_resource type="Texture2D" uid="uid://dl4uxruy736o8" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_04.png" id="38_eqolr"]
[ext_resource type="Texture2D" uid="uid://dpcvm5f82uwra" path="res://assets/corgi/04_running/skeleton-0e_running_05.png" id="38_vt0ah"]
[ext_resource type="Texture2D" uid="uid://d3u528ony4fk" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_04.png" id="38_wx752"]
[ext_resource type="Texture2D" uid="uid://da7ebi0g2db8e" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_05.png" id="39_ed1m0"]
[ext_resource type="Texture2D" uid="uid://cimineqh7xokw" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_05.png" id="39_kjgit"]
[ext_resource type="Texture2D" uid="uid://bvcr43rx76g2t" path="res://assets/corgi/04_running/skeleton-0e_running_06.png" id="39_nrcn5"]
[ext_resource type="Texture2D" uid="uid://cbrokascu45jh" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_06.png" id="40_dkpsu"]
[ext_resource type="Texture2D" uid="uid://sq0iqppoyjo2" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_06.png" id="40_ecpor"]
[ext_resource type="Texture2D" uid="uid://bo6n5uotyrwe0" path="res://assets/corgi/04_running/skeleton-0e_running_07.png" id="40_rncwe"]
[ext_resource type="Texture2D" uid="uid://ncxkhdxc3icw" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_07.png" id="41_pf0mx"]
[ext_resource type="Texture2D" uid="uid://glt1kmi48fme" path="res://assets/corgi/04_running/skeleton-0e_running_08.png" id="41_wojof"]
[ext_resource type="Texture2D" uid="uid://j0mtqhf7fqhl" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_07.png" id="41_yn7ac"]
[ext_resource type="Texture2D" uid="uid://dche08aio6tdn" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_08.png" id="42_3nuqs"]
[ext_resource type="Texture2D" uid="uid://df32utjl8ul0o" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_08.png" id="42_bvjs3"]
[ext_resource type="Texture2D" uid="uid://c63paf2j3m6jk" path="res://assets/corgi/04_running/skeleton-0e_running_09.png" id="42_oj0ny"]
[ext_resource type="Texture2D" uid="uid://ck233wxhbpo20" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_09.png" id="43_7bntm"]
[ext_resource type="Texture2D" uid="uid://ccqfrbok3l2kx" path="res://assets/corgi/04_running/skeleton-0e_running_10.png" id="43_30exm"]
[ext_resource type="Texture2D" uid="uid://b1vvtjllv1kkt" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_09.png" id="43_j00vs"]
[ext_resource type="Texture2D" uid="uid://bsbqf1vklyqw7" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_10.png" id="44_2fjll"]
[ext_resource type="Texture2D" uid="uid://cuk316pumw0nq" path="res://assets/corgi/04_running/skeleton-0e_running_11.png" id="44_4ug7h"]
[ext_resource type="Texture2D" uid="uid://d1qedh0strxnj" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_10.png" id="44_6ahv0"]
[ext_resource type="Texture2D" uid="uid://co2o54a52tv71" path="res://assets/corgi/04_running/skeleton-0e_running_12.png" id="45_hcq58"]
[ext_resource type="Texture2D" uid="uid://deaheb0v1mtja" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_11.png" id="45_rl57l"]
[ext_resource type="Texture2D" uid="uid://dtfi4uwxgt8mt" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_11.png" id="45_vsr0q"]
[ext_resource type="Texture2D" uid="uid://bghm0k6m8xafo" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_12.png" id="46_fd0f2"]
[ext_resource type="Texture2D" uid="uid://b0sgwe2xvh11q" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_12.png" id="46_os0sp"]
[ext_resource type="Texture2D" uid="uid://cae8pod4i28od" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_13.png" id="47_jfpcr"]
[ext_resource type="Texture2D" uid="uid://c1g1vu50jec7m" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_13.png" id="47_nddbw"]
[ext_resource type="Texture2D" uid="uid://cgytst3jw6nqm" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_14.png" id="48_1mdpc"]
[ext_resource type="Texture2D" uid="uid://x8qhnishe5c6" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_14.png" id="48_jasf6"]
[ext_resource type="Texture2D" uid="uid://d2snim1k5oans" path="res://assets/corgi/07_headpushattack/skeleton-0g_head_push_attack_15.png" id="49_0a5f0"]
[ext_resource type="Texture2D" uid="uid://bcfqjuprwvbsu" path="res://assets/corgi/06_headhammerattack/skeleton-0g_head_hammer_attack_15.png" id="49_hp1qe"]
[ext_resource type="Texture2D" uid="uid://not50w7ehm6x" path="res://assets/corgi/08_rest/skeleton-0h_rest_00.png" id="66_iujbj"]
[ext_resource type="Texture2D" uid="uid://dy8b4l0c58jma" path="res://assets/corgi/08_rest/skeleton-0h_rest_01.png" id="67_mo7sr"]
[ext_resource type="Texture2D" uid="uid://cqhoitkd0py0a" path="res://assets/corgi/08_rest/skeleton-0h_rest_02.png" id="68_hgcwe"]
[ext_resource type="Texture2D" uid="uid://bkxfalhg5f7g8" path="res://assets/corgi/08_rest/skeleton-0h_rest_03.png" id="69_mkg4m"]
[ext_resource type="Texture2D" uid="uid://dk1pitcvp4ad3" path="res://assets/corgi/08_rest/skeleton-0h_rest_04.png" id="70_is81c"]
[ext_resource type="Texture2D" uid="uid://capikadek6e4b" path="res://assets/corgi/08_rest/skeleton-0h_rest_05.png" id="71_5bu2v"]
[ext_resource type="Texture2D" uid="uid://br8tb1st7y7y2" path="res://assets/corgi/08_rest/skeleton-0h_rest_06.png" id="72_4vy7l"]
[ext_resource type="Texture2D" uid="uid://c2656pn6jo3hs" path="res://assets/corgi/08_rest/skeleton-0h_rest_07.png" id="73_wefo0"]
[ext_resource type="Texture2D" uid="uid://dulo1t0sxnq5r" path="res://assets/corgi/08_rest/skeleton-0h_rest_08.png" id="74_m5gs0"]
[ext_resource type="Texture2D" uid="uid://ddqx5krsvtpfl" path="res://assets/corgi/08_rest/skeleton-0h_rest_09.png" id="75_6tvpj"]
[ext_resource type="Texture2D" uid="uid://vtmg8on34wij" path="res://assets/corgi/08_rest/skeleton-0h_rest_10.png" id="76_alg0b"]
[ext_resource type="Texture2D" uid="uid://iw0evwmhicey" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_00.png" id="90_70lwr"]
[ext_resource type="Texture2D" uid="uid://c6uyeqx43wh7g" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_01.png" id="91_7u2wk"]
[ext_resource type="Texture2D" uid="uid://vxv5gk2ahyvp" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_02.png" id="92_qqy32"]
[ext_resource type="Texture2D" uid="uid://d1hmnbkledjfg" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_03.png" id="93_kv5vk"]
[ext_resource type="Texture2D" uid="uid://bb68chqvhsbmi" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_04.png" id="94_7q4kl"]
[ext_resource type="Texture2D" uid="uid://t7fqg47n33bp" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_05.png" id="95_pqvdi"]
[ext_resource type="Texture2D" uid="uid://brfl4sj8wlofs" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_06.png" id="96_10wb2"]
[ext_resource type="Texture2D" uid="uid://b2vnw3p7gxwl8" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_07.png" id="97_k7sap"]
[ext_resource type="Texture2D" uid="uid://dhu2rd5e0u2wt" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_08.png" id="98_npmga"]
[ext_resource type="Texture2D" uid="uid://byg285uqptpuw" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_09.png" id="99_eky6m"]
[ext_resource type="Texture2D" uid="uid://12wwjn6i27qs" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_10.png" id="100_agbbt"]
[ext_resource type="Texture2D" uid="uid://258etsktp4fq" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_11.png" id="101_d3sye"]
[ext_resource type="Texture2D" uid="uid://ce4mgjl7vsfi2" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_12.png" id="102_4nv2o"]
[ext_resource type="Texture2D" uid="uid://bh2yht5n1fkfn" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_13.png" id="103_hs84m"]
[ext_resource type="Texture2D" uid="uid://741a8y1icntg" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_14.png" id="104_gsxfc"]
[ext_resource type="Texture2D" uid="uid://ti4me6li7p35" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_15.png" id="105_fv7yp"]
[ext_resource type="Texture2D" uid="uid://6wsuyhf6ij5g" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_16.png" id="106_q3w35"]
[ext_resource type="Texture2D" uid="uid://dr65g35g5xay" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_17.png" id="107_vyrm5"]
[ext_resource type="Texture2D" uid="uid://b4spmoxhdjavy" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_18.png" id="108_0er2t"]
[ext_resource type="Texture2D" uid="uid://mqk6x6m7cks8" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_19.png" id="109_bjmep"]
[ext_resource type="Texture2D" uid="uid://brisrvvv7gejf" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_20.png" id="110_vjhnn"]
[ext_resource type="Texture2D" uid="uid://difds0qmfk3vn" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_21.png" id="111_wf2tq"]
[ext_resource type="Texture2D" uid="uid://ylhbhnjlpifu" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_22.png" id="112_53kjh"]
[ext_resource type="Texture2D" uid="uid://cmiq8ill1oyni" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_23.png" id="113_dimxn"]
[ext_resource type="Texture2D" uid="uid://fpvhlrtsnxmb" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_24.png" id="114_cf2kl"]
[ext_resource type="Texture2D" uid="uid://p53qpktwwsmp" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_25.png" id="115_7pdan"]
[ext_resource type="Texture2D" uid="uid://cbe1s3i4xp2hh" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_26.png" id="116_yhkv7"]
[ext_resource type="Texture2D" uid="uid://bytdtil3vaxuv" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_27.png" id="117_paum0"]
[ext_resource type="Texture2D" uid="uid://coqro4vbhguju" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_28.png" id="118_cj3h5"]
[ext_resource type="Texture2D" uid="uid://p42daahm30w5" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_29.png" id="119_kvi6n"]
[ext_resource type="Texture2D" uid="uid://btd5sk1aar6rx" path="res://assets/corgi/09_sleep/skeleton-0i_sleep_30.png" id="120_6rvpk"]
[ext_resource type="AudioStream" uid="uid://bjtjafg1tdccb" path="res://assets/sound/run.mp3" id="121_e3bvt"]
[ext_resource type="AudioStream" uid="uid://c5rsx4s5iv7nr" path="res://assets/sound/rest.mp3" id="122_uim7a"]
[ext_resource type="AudioStream" uid="uid://bbvrgwlgdptpe" path="res://assets/sound/ram.mp3" id="123_tjed3"]
[ext_resource type="AudioStream" uid="uid://culiqfeaauxt7" path="res://assets/sound/push.mp3" id="124_bhcov"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fg46y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0os5j")
}, {
"duration": 1.0,
"texture": ExtResource("2_v0sv5")
}, {
"duration": 1.0,
"texture": ExtResource("3_mwp3x")
}, {
"duration": 1.0,
"texture": ExtResource("4_xa5kk")
}, {
"duration": 1.0,
"texture": ExtResource("5_dcqf1")
}, {
"duration": 1.0,
"texture": ExtResource("6_lrihx")
}, {
"duration": 1.0,
"texture": ExtResource("7_0i4sn")
}, {
"duration": 1.0,
"texture": ExtResource("8_cywpw")
}, {
"duration": 1.0,
"texture": ExtResource("9_wuq8a")
}, {
"duration": 1.0,
"texture": ExtResource("10_k1gwj")
}, {
"duration": 1.0,
"texture": ExtResource("11_uxit1")
}, {
"duration": 1.0,
"texture": ExtResource("12_7bfuq")
}, {
"duration": 1.0,
"texture": ExtResource("13_sf3uc")
}, {
"duration": 1.0,
"texture": ExtResource("14_ip3xe")
}, {
"duration": 1.0,
"texture": ExtResource("15_q3cah")
}, {
"duration": 1.0,
"texture": ExtResource("16_sneax")
}, {
"duration": 1.0,
"texture": ExtResource("17_jqkyc")
}, {
"duration": 1.0,
"texture": ExtResource("18_mve6m")
}, {
"duration": 1.0,
"texture": ExtResource("19_bhovx")
}, {
"duration": 1.0,
"texture": ExtResource("20_cbt07")
}, {
"duration": 1.0,
"texture": ExtResource("21_g1phg")
}],
"loop": true,
"name": &"idle",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_qpv4r")
}, {
"duration": 1.0,
"texture": ExtResource("23_lvwtg")
}, {
"duration": 1.0,
"texture": ExtResource("24_wa4qo")
}, {
"duration": 1.0,
"texture": ExtResource("25_vp8e4")
}, {
"duration": 1.0,
"texture": ExtResource("26_4bqwk")
}, {
"duration": 1.0,
"texture": ExtResource("27_7fsi1")
}, {
"duration": 1.0,
"texture": ExtResource("28_6ljc7")
}, {
"duration": 1.0,
"texture": ExtResource("29_tsbyy")
}, {
"duration": 1.0,
"texture": ExtResource("30_mr0te")
}, {
"duration": 1.0,
"texture": ExtResource("31_whnep")
}, {
"duration": 1.0,
"texture": ExtResource("32_4e57m")
}],
"loop": true,
"name": &"jump",
"speed": 25.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("34_y501y")
}, {
"duration": 1.0,
"texture": ExtResource("35_elhwk")
}, {
"duration": 1.0,
"texture": ExtResource("36_dr6sc")
}, {
"duration": 1.0,
"texture": ExtResource("37_xh7v6")
}, {
"duration": 1.0,
"texture": ExtResource("38_wx752")
}, {
"duration": 1.0,
"texture": ExtResource("39_ed1m0")
}, {
"duration": 1.0,
"texture": ExtResource("40_dkpsu")
}, {
"duration": 1.0,
"texture": ExtResource("41_pf0mx")
}, {
"duration": 1.0,
"texture": ExtResource("42_3nuqs")
}, {
"duration": 1.0,
"texture": ExtResource("43_j00vs")
}, {
"duration": 1.0,
"texture": ExtResource("44_2fjll")
}, {
"duration": 1.0,
"texture": ExtResource("45_rl57l")
}, {
"duration": 1.0,
"texture": ExtResource("46_os0sp")
}, {
"duration": 1.0,
"texture": ExtResource("47_jfpcr")
}, {
"duration": 1.0,
"texture": ExtResource("48_1mdpc")
}, {
"duration": 1.0,
"texture": ExtResource("49_0a5f0")
}],
"loop": false,
"name": &"push",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_i1w4s")
}, {
"duration": 1.0,
"texture": ExtResource("35_m4ml6")
}, {
"duration": 1.0,
"texture": ExtResource("36_tmpw1")
}, {
"duration": 1.0,
"texture": ExtResource("37_qc067")
}, {
"duration": 1.0,
"texture": ExtResource("38_eqolr")
}, {
"duration": 1.0,
"texture": ExtResource("39_kjgit")
}, {
"duration": 1.0,
"texture": ExtResource("40_ecpor")
}, {
"duration": 1.0,
"texture": ExtResource("41_yn7ac")
}, {
"duration": 1.0,
"texture": ExtResource("42_bvjs3")
}, {
"duration": 1.0,
"texture": ExtResource("43_7bntm")
}, {
"duration": 1.0,
"texture": ExtResource("44_6ahv0")
}, {
"duration": 1.0,
"texture": ExtResource("45_vsr0q")
}, {
"duration": 1.0,
"texture": ExtResource("46_fd0f2")
}, {
"duration": 1.0,
"texture": ExtResource("47_nddbw")
}, {
"duration": 1.0,
"texture": ExtResource("48_jasf6")
}, {
"duration": 1.0,
"texture": ExtResource("49_hp1qe")
}],
"loop": false,
"name": &"ram",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("66_iujbj")
}, {
"duration": 1.0,
"texture": ExtResource("67_mo7sr")
}, {
"duration": 1.0,
"texture": ExtResource("68_hgcwe")
}, {
"duration": 1.0,
"texture": ExtResource("69_mkg4m")
}, {
"duration": 1.0,
"texture": ExtResource("70_is81c")
}, {
"duration": 1.0,
"texture": ExtResource("71_5bu2v")
}, {
"duration": 1.0,
"texture": ExtResource("72_4vy7l")
}, {
"duration": 1.0,
"texture": ExtResource("73_wefo0")
}, {
"duration": 1.0,
"texture": ExtResource("74_m5gs0")
}, {
"duration": 1.0,
"texture": ExtResource("75_6tvpj")
}, {
"duration": 1.0,
"texture": ExtResource("76_alg0b")
}],
"loop": true,
"name": &"rest",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_2604g")
}, {
"duration": 1.0,
"texture": ExtResource("34_2xcsg")
}, {
"duration": 1.0,
"texture": ExtResource("35_5up4i")
}, {
"duration": 1.0,
"texture": ExtResource("36_qdkj2")
}, {
"duration": 1.0,
"texture": ExtResource("37_2l02w")
}, {
"duration": 1.0,
"texture": ExtResource("38_vt0ah")
}, {
"duration": 1.0,
"texture": ExtResource("39_nrcn5")
}, {
"duration": 1.0,
"texture": ExtResource("40_rncwe")
}, {
"duration": 1.0,
"texture": ExtResource("41_wojof")
}, {
"duration": 1.0,
"texture": ExtResource("42_oj0ny")
}, {
"duration": 1.0,
"texture": ExtResource("43_30exm")
}, {
"duration": 1.0,
"texture": ExtResource("44_4ug7h")
}, {
"duration": 1.0,
"texture": ExtResource("45_hcq58")
}],
"loop": true,
"name": &"run",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("90_70lwr")
}, {
"duration": 1.0,
"texture": ExtResource("91_7u2wk")
}, {
"duration": 1.0,
"texture": ExtResource("92_qqy32")
}, {
"duration": 1.0,
"texture": ExtResource("93_kv5vk")
}, {
"duration": 1.0,
"texture": ExtResource("94_7q4kl")
}, {
"duration": 1.0,
"texture": ExtResource("95_pqvdi")
}, {
"duration": 1.0,
"texture": ExtResource("96_10wb2")
}, {
"duration": 1.0,
"texture": ExtResource("97_k7sap")
}, {
"duration": 1.0,
"texture": ExtResource("98_npmga")
}, {
"duration": 1.0,
"texture": ExtResource("99_eky6m")
}, {
"duration": 1.0,
"texture": ExtResource("100_agbbt")
}, {
"duration": 1.0,
"texture": ExtResource("101_d3sye")
}, {
"duration": 1.0,
"texture": ExtResource("102_4nv2o")
}, {
"duration": 1.0,
"texture": ExtResource("103_hs84m")
}, {
"duration": 1.0,
"texture": ExtResource("104_gsxfc")
}, {
"duration": 1.0,
"texture": ExtResource("105_fv7yp")
}, {
"duration": 1.0,
"texture": ExtResource("106_q3w35")
}, {
"duration": 1.0,
"texture": ExtResource("107_vyrm5")
}, {
"duration": 1.0,
"texture": ExtResource("108_0er2t")
}, {
"duration": 1.0,
"texture": ExtResource("109_bjmep")
}, {
"duration": 1.0,
"texture": ExtResource("110_vjhnn")
}, {
"duration": 1.0,
"texture": ExtResource("111_wf2tq")
}, {
"duration": 1.0,
"texture": ExtResource("112_53kjh")
}, {
"duration": 1.0,
"texture": ExtResource("113_dimxn")
}, {
"duration": 1.0,
"texture": ExtResource("114_cf2kl")
}, {
"duration": 1.0,
"texture": ExtResource("115_7pdan")
}, {
"duration": 1.0,
"texture": ExtResource("116_yhkv7")
}, {
"duration": 1.0,
"texture": ExtResource("117_paum0")
}, {
"duration": 1.0,
"texture": ExtResource("118_cj3h5")
}, {
"duration": 1.0,
"texture": ExtResource("119_kvi6n")
}, {
"duration": 1.0,
"texture": ExtResource("120_6rvpk")
}],
"loop": true,
"name": &"sleep",
"speed": 25.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwat3"]
size = Vector2(835, 823)

[node name="Chonki" type="Node2D"]
script = ExtResource("1_j6uc5")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(2, 0)
sprite_frames = SubResource("SpriteFrames_fg46y")
animation = &"ram"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-32.5, 54.5)
shape = SubResource("RectangleShape2D_jwat3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-14, 71)
scale = Vector2(486.93, -118.765)
zoom = Vector2(0.4, 0.4)

[node name="AudioRun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("121_e3bvt")
autoplay = true

[node name="RestRun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("122_uim7a")

[node name="AudioRam" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("123_tjed3")

[node name="AudioPush" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("124_bhcov")

[connection signal="animation_finished" from="CharacterBody2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
